Discovered an issue that was causing security issues and resolved it, So far all security issues have been solved and now time to implement the google sign in option.

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -29,8 +29,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             android:padding="10dp"
             >
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/googleSignIn_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailSignIn_textInput"
